# project1

./: .gitignore  CMakeLists.txt  main.cpp  matrixmultiply.cpp  matrixmultiply.h
lib/: CMakeLists.txt  lib.h
math/: matrixmultiply.cpp  matrixmultiply.h
script/: plot.py
